<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/aPropos" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"
        android:text="@string/hello" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonVoirTableMN90"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="34dp"
            android:text="@string/voirTableMN90" />

        <Button
            android:id="@+id/buttonPlongeeSimple"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="34dp"
            android:text="@string/plongeeSimple" />

        <Button
            android:id="@+id/buttonPlongeeSuc"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="34dp"
            android:text="@string/plongeeSuccessive" />
    </LinearLayout>

</RelativeLayout>